# PBX

./: .gitignore  PBX_Platform_Portfolio.pptx  README.md  make_ppt.py
asterisk/: ari.conf  extconfig.conf  extensions.conf  res_pgsql.conf
pbx-platform/: Dockerfile  dev.sh  docker-compose.yml
pbx-platform/libs/pbx_common/: db.py  models.py  pyproject.toml
pbx-platform/libs/pbx_common.egg-info/: SOURCES.txt  requires.txt  top_level.txt
pbx-platform/libs/pbx_common/models/: __init__.py  asterisk.py  call.py  company.py  consult_category.py  consultation.py  customer.py  ivr.py  permission.py  queue.py  user.py
pbx-platform/libs/pbx_common/pbx_common.egg-info/: PKG-INFO  SOURCES.txt
pbx-platform/libs/pbx_common/utils/: crypto.py  (+1 more)
pbx-platform/services/api/: alembic.ini  create_tables.py  pyproject.toml  run.sh
pbx-platform/services/api/alembic/: env.py
pbx-platform/services/api/alembic/versions/: 90cd98a7506f_add_queue_id_to_ivr_nodes.py  add_consult_tables.py
pbx-platform/services/api/app/: deps.py  main.py
pbx-platform/services/api/app/core/: config.py
pbx-platform/services/api/app/db/: session.py
pbx-platform/services/api/app/routes/: auth.py  calls.py  companies.py  consult.py  customer.py  ivr.py  permissions.py  queue.py  signaling.py  users.py
pbx-platform/services/api/app/schemas/: call.py  company.py  consult.py  customer.py  ivr.py  permissions.py  queue.py  user.py
pbx-platform/services/ari-worker/: pyproject.toml  run.sh
pbx-platform/services/frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
(+118 files in other folders)
