[project]
name = "pbx-api"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "SQLAlchemy>=2.0",
  "asyncpg>=0.28",
  "python-dotenv>=1.0",
  "pbx-common @ file://../libs/pbx_common",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"